--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 *.Rproj*
-.Rproj.user
+*buildignore
+vignettes/*.R
+vignettes/*.toc
+vignettes/*.aux
+vignettes/*.blg
+vignettes/*.tex
+vignettes/*.pdf
+vignettes/figure/*
+.Rhistory
+.Rapp.history
